new layout new UI

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 		<link rel="stylesheet" href="css/typography.css">
 		<link rel="stylesheet" href="css/services.css">
 		<link rel="stylesheet" href="css/showreel.css">
+		<link rel="stylesheet" href="css/selected-works.css">
+
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
 		<script src="granim.min.js"></script>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 		<link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
 		<link rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -73,7 +76,7 @@
 
 			<div class="intro__container">
 				<canvas id="granim-canvas"></canvas>
-				<h1 class="intro__text jello animated">Hi there, my name is Filippo Gianessi, and I live in Faenza (Italy). I’m a 26 and italian multi-disciplinary designer and agile enthusiast. Working at <a href="https://www.ideato.it" target="_blank">ideato</a> →.
+				<h1 class="intro__text jello animated">Hi there, my name is Filippo Gianessi, and I live in Faenza (Italy). I’m a 26 and italian multi-disciplinary designer and agile enthusiast. Working at <a href="https://www.ideato.it" target="_blank">Flowing ↗</a>
 				</h1>
 				<div class="intro__logo">
 					<svg version="1.1" id="Livello_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="250px" height="250px" viewBox="0 0 150 150" style="enable-background:new 0 0 150 150;" xml:space="preserve">
@@ -97,96 +100,125 @@
 			</div>
 
 			<div class="services">
-				<h2 class="services__title">This is what I do</h2>
 				<div class="services__container">
+					<div class="services__title">↶ WHAT I DO</div>
 					<div class="service__container">
 						<div> <img src="asset/icons/user-experience.svg" class="service__icon" alt=""></div>
 					<div class="service__text-container">
-						<div class="service__title">User experience design</div>
-						<div class="service__text">Lorem ipsum dolor sit amet, consectetur
-							adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-							magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-						</div>
+						<div class="service__title">UX design</div>
 					</div>
+					<a href="#" class="service__button">DRIBBLE ↗</a>
 					</div>
 					<div class="service__container">
 						<div> <img src="asset/icons/user-interface.svg" class="service__icon" alt=""></div>
 						<div class="service__text-container">
-							<div class="service__title">User interface design</div>
-							<div class="service__text">Lorem ipsum dolor sit amet, consectetur
-								adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-								magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-							</div>
+							<div class="service__title">UI design</div>
 						</div>
+						<a href="#" class="service__button">DRIBBLE ↗</a>
 					</div>
 
 					<div class="service__container">
 						<div> <img src="asset/icons/branding.svg" class="service__icon" alt=""></div>
 						<div class="service__text-container">
-							<div class="service__title">Branding</div>
-							<div class="service__text">Lorem ipsum dolor sit amet, consectetur
-								adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-								magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-							</div>
+							<div class="service__title">Branding systems</div>
 						</div>
+						<a href="#" class="service__button">BEHANCE ↗</a>
 					</div>
 
 					<div class="service__container">
 						<div> <img src="asset/icons/editorial.svg" class="service__icon" alt=""></div>
 						<div class="service__text-container">
 							<div class="service__title">Editorial design</div>
-							<div class="service__text">Lorem ipsum dolor sit amet, consectetur
-								adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-								magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+						</div>
+						<a href="#" class="service__button">BEHANCE ↗</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="selected-works">
+				<div class="selected-works__container">
+					<div class="selected-works__title">↶ SELECTED WORKS</div>
+					<div class="works">
+						<div class="works__item">
+							<div class="works__title-container">
+								<div class="works__title">Sortello App</div>
+								<div class="works__skills-container">
+									<div class="works__skill">UX DESIGN</div>
+									<div class="works__skill">UI DESIGN</div>
+									<div class="works__skill">BRAND IDENTITY</div>
+									<div class="works__skill">HTML & CSS</div>
+								</div>
+							</div>
+							<div class="works__links-container">
+								<a class="works__button">VISIT THE PROJECT ↗</a>
+								<div class="works__social-container">
+									<a class="works__social-link"><i class="fab fa-facebook-f"></i></a>
+									<a class="works__social-link"><i class="fab fa-twitter"></i></a>
+								</div>
+							</div>
+						</div>
+						<div class="works__item">
+							<div class="works__title-container">
+								<div class="works__title">Small city, big stories</div>
+								<div class="works__skills-container">
+									<div class="works__skill">UX DESIGN</div>
+									<div class="works__skill">UI DESIGN</div>
+									<div class="works__skill">BRAND IDENTITY</div>
+									<div class="works__skill">HTML & CSS</div>
+									<div class="works__skill">GREENSOCK</div>
+									<div class="works__skill">ILLUSTRATION</div>
+									<div class="works__skill">MOTION DESIGN</div>
+								</div>
+							</div>
+							<div class="works__links-container">
+								<a class="works__button">VISIT THE PROJECT ↗</a>
+								<div class="works__social-container">
+									<a class="works__social-link"><i class="fab fa-facebook-f"></i></a>
+									<a class="works__social-link"><i class="fab fa-twitter"></i></a>
+								</div>
+							</div>
+						</div>
+						<div class="works__item">
+							<div class="works__title-container">
+								<div class="works__title">Frameworkless Movement</div>
+								<div class="works__skills-container">
+									<div class="works__skill">BRAND IDENTITY</div>
+								</div>
+							</div>
+							<div class="works__links-container">
+								<a class="works__button">VISIT THE PROJECT ↗</a>
+								<div class="works__social-container">
+									<a class="works__social-link"><i class="fab fa-facebook-f"></i></a>
+									<a class="works__social-link"><i class="fab fa-twitter"></i></a>
+								</div>
+							</div>
+						</div>
+						<div class="works__item">
+							<div class="works__title-container">
+								<div class="works__title">Contamination Lab</div>
+								<div class="works__skills-container">
+									<div class="works__skill">UX DESIGN</div>
+									<div class="works__skill">UI DESIGN</div>
+									<div class="works__skill">BRAND IDENTITY</div>
+									<div class="works__skill">HTML & CSS</div>
+									<div class="works__skill">EDITORIAL DESIGN</div>
+								</div>
+							</div>
+							<div class="works__links-container">
+								<a class="works__button">VISIT THE PROJECT ↗</a>
+								<div class="works__social-container">
+									<a class="works__social-link"><i class="fab fa-facebook-f"></i></a>
+									<a class="works__social-link"><i class="fab fa-twitter"></i></a>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<div class="showreel">
-				<h2 class="showreel__title">
-					Selected works
-				</h2>
-				<div class="showreel__container">
-					<div class="showreel__image">
-						<img src="asset/showreel/1.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/5.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/11.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/4.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/9.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/2.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/3.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/6.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/7.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/8.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/10.png" alt="">
-					</div>
-					<div class="showreel__image">
-						<img src="asset/showreel/12.png" alt="">
-					</div>
-				</div>
-			</div>
+
+
+
 
 			<div class="credits__container">
 				<div class="credits__text"><a href="resume.html">Click here to see my resume</a> →</div>
